--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,24 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+/* Variables */
+/* Mixins */
+.section-headers {
+  margin: 10px;
+  padding: 10px;
+  font-size: 2rem;
+}
+.table-oddline {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+.table-evenline {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  background-color: lightgray;
+}
 html,
 body,
 div,
@@ -119,7 +137,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 table {
@@ -135,5 +153,173 @@ body {
   height: 100%;
 }
 body {
-  background-color: #EFEFEF;
+  background-color: #efefef;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  width: 1000px;
+  margin: 65px;
+}
+body .container {
+  font: 62.5%;
+  display: flex;
+  flex-flow: column nowrap;
+  align-content: center;
+}
+body .container header nav {
+  display: flex;
+  justify-content: flex-end;
+}
+@media (max-width: 500px) {
+  body .container header nav {
+    display: flex;
+    flex-flow: column;
+  }
+}
+body .container header nav a {
+  text-decoration: none;
+  padding: 15px;
+  color: black;
+}
+@media (max-width: 500px) {
+  body .container header nav a {
+    width: 100%;
+    border: 1px solid lightgray;
+  }
+}
+body .container .personal-info {
+  display: flex;
+  flex-flow: column nowrap;
+  width: 100%;
+  background: #e8ecef;
+  padding: 40px 20px;
+}
+body .container .personal-info .profile-picture {
+  width: 37.5%;
+  margin: 10px;
+}
+@media (max-width: 500px) {
+  body .container .personal-info .profile-picture {
+    display: none;
+  }
+}
+body .container .personal-info .name {
+  font-size: 3.5rem;
+  margin: 10px;
+}
+body .container .personal-info .tagline {
+  margin: 10px;
+  font-size: 1.2rem;
+}
+body .container .personal-info p {
+  margin: 10px;
+  margin-top: 30px;
+}
+body .container .personal-info button {
+  margin: 10px;
+  width: 15%;
+  height: 35px;
+  background: #818181;
+  border: none;
+  color: white;
+  font-size: 1.2rem;
+  margin-bottom: 50px;
+}
+body .container .main-content {
+  display: flex;
+  flex-flow: column;
+}
+body .container .main-content .bottom-content {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+body .container .main-content .bottom-content .about-me {
+  display: flex;
+  flex-flow: column nowrap;
+  width: 47.5%;
+}
+body .container .main-content .bottom-content .about-me .about-header {
+  margin: 10px;
+  padding: 10px;
+  font-size: 2rem;
+}
+body .container .main-content .bottom-content .skill-section {
+  margin: 10px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-content: flex-start;
+  width: 50%;
+}
+body .container .main-content .bottom-content .skill-section .my-skills {
+  margin: 10px;
+  padding: 10px;
+  font-size: 2rem;
+}
+body .container .main-content .bottom-content .skill-section ul {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  height: 100%;
+  border: 1px solid lightgray;
+}
+body .container .main-content .bottom-content .skill-section ul li {
+  border: 1px solid lightgray;
+  padding: 15px;
+  width: 100%;
+}
+body .container .main-content .work-history {
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+}
+body .container .main-content .work-history .history-header {
+  margin: 10px;
+  padding: 10px;
+  font-size: 2rem;
+}
+body .container .main-content .work-history .history-table {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  margin: 20px 0;
+}
+body .container .main-content .work-history .history-table .table-column {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: baseline;
+  align-items: baseline;
+  width: 100%;
+}
+body .container .main-content .work-history .history-table .table-column .list-header {
+  font-style: bold;
+}
+body .container .main-content .work-history .history-table .table-column .list-odd {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+body .container .main-content .work-history .history-table .table-column .list-even {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  background-color: lightgray;
+}
+body .container .main-content .contact {
+  font-size: 1.5rem;
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+body footer {
+  display: flex;
+  justify-content: center;
+  background: #818181;
+  color: white;
+  padding: 20px;
 }
